jena-shex/src/test/files/shexTest/negativeStructure/CycleExtends.shex
<http://a.example/S1> EXTENDS @<http://a.example/S2> {}

<http://a.example/S2> EXTENDS @<http://a.example/S1> {}

